--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -85,6 +85,8 @@ Der Vergleich zwischen dem Mittelwert einer Veranstaltung und dem Gesamtmittel i
 
 An der ungekürzten Übernahme von Kommentaren zu einer Veranstaltung wurde kritisiert, dass so einzelne Meinungen in krassem Missverhältnis zur Statistik aller Studierenden überbewertet würden. Wir gingen daher zwischenzeitlich dazu über, Statistik und Kommentare zu sichten und gaben ein Gesamtbild der Veranstaltung in der Zusammenfassung an. Mittlerweile hat sich die Stimmung geändert und viele DozentInnen sind der Ansicht, dass das unverfälschte Übernehmen der Kommentare die bessere Alternative sei. Die Kommentare zu einer Veranstaltung werden deshalb wieder abgetippt und sind im Verhältnis zur gesamten HörerInnenzahl zu betrachten.
 
+\subsubsection{Nichtveröffentlichung von Ergebnissen}
+Wenn von den Professorinnen und Professoren bzw. Tutorinnen und Tutoren keine Einverständnis zur Veröffentlichung der Ergebnisse erteilt wurde, sind sie in dieser Evaluation nicht enthalten. 
 
 \subsubsection{Allgemeine Bemerkungen zur Beurteilung der Lehrveranstaltungen}
 
@@ -93,7 +95,3 @@ Die Mittelwerte über alle Veranstaltungen liegen meist höher als die neutralen
 \subsubsection{Verfügbarkeit der Evaluation}
 
 Diese Evaluation ist üblicherweise für ein Semester an den verschiedenen Aushängeorten zu finden und kann darüber hinaus durch Anfrage im Fachschaftsraum eingesehen werden.
-
-Die Evaluation der Fakultät für Mathematik und Informatik ist zusätzlich aus dem internen Netz der Universität oder mittels VPN als PDF-Dokument verfügbar:
-
-\url{http://mathphys.fsk.uni-heidelberg.de/evaluation.html}
