updating eval.cls

--- a/tex/bogen/tex/latex/eval/eval.cls
+++ b/tex/bogen/tex/latex/eval/eval.cls
@@ -5,7 +5,10 @@
 \LoadClass[twoside,7pt]{scrartcl}
 \RequirePackage{fixltx2e}
 
+
 \RequirePackage{fontspec}
+\RequirePackage{lmodern}
+
 \RequirePackage{amssymb}
 \RequirePackage{array}
 \RequirePackage{babel}
